--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-contourpy==1.3.0
+contourpy==1.3.1
 cycler==0.12.1
-fonttools==4.54.1
+fonttools==4.55.1
 kiwisolver==1.4.7
-matplotlib==3.9.2
+matplotlib==3.9.3
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+pycairo==1.27.0
+PyGObject==3.50.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
